--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.8",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
